# uniska-2nd-semester

./: .gitignore
.etc/: agama.txt  program_studi.txt
SBD 2/.container/: docker-compose.yml
SBD 2/Pertemuan 2/: README.md  _.sql
SBD 2/Pertemuan 3/: department.sql  employees.sql
VISUAL 1/FORM INPUT MAHASISWA/project/: Project1.dpr
algo-2/latihan-haskell/bab-1/: 01_aritmatik.hs  01_celcius.hs  01_nilai_kuliah.hs  01_persegi_panjang.hs  02_persegi_panjang.hs  03_persegi_panjang.hs
algo-2/latihan-haskell/bab-2/: latihan2_1_1.hs  latihan2_1_2.hs  latihan2_1_3.hs  latihan2_1_4.hs  latihan2_1_5.hs  latihan2_1_6.hs
algo-2/latihan-haskell/bab-3/: latihan3_1_1.hs  latihan3_1_2.hs  latihan3_1_3.hs  latihan3_1_4.hs  latihan3_1_5.hs
algo-2/latihan/bab-1/: 01_aritmatik.py  01_celcius.py  01_nilai_kuliah.py  01_persegi_panjang.py  02_persegi_panjang.py  03_persegi_panjang.py
algo-2/latihan/bab-2/: latihan2_1_1.py  latihan2_1_2.py  latihan2_1_3.py  latihan2_1_4.py  latihan2_1_5.py  latihan2_1_6.py
sbd-2/20230313-pertemuan-1/: tblbuku.sql  tblpengarang.sql
sbd-2/20230320-pertemuan-2/: README.md
sbd-2/20230508-pertemuan-7/: dosen.sql  mahasiswa.sql  prodi.sql
sbd-2/20230522-pertemuan-9/: _.sql
sbd-2/pertemuan-1/: tblbuku.sql
sbd-2/pertemuan-3/: salary_grade.sql
visual-1/20230321-pertemuan-2/project-egui/: Cargo.toml  README.md
visual-1/20230321-pertemuan-2/project-egui/input-data-mahasiswa/: Cargo.toml
visual-1/20230321-pertemuan-2/project-egui/input-data-mahasiswa/src/: main.rs
visual-1/20230321-pertemuan-2/project-egui/src/: main.rs
(+96 files in other folders)
