[package]
name = "project-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["datepicker"] }
