[package]
name = "input-data-mahasiswa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
eframe = { version = "0.21.3", features = ["__screenshot"] }
egui_extras = { version = "0.21.0", features = ["datepicker"] }
